samples/_failures_safe/1761630846_ac6216_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a64cc92.c: In function ‘main’:
./samples/SAFE/__tmp_4a64cc92.c:143:9: error: expected expression at end of input
  143 |         add_edge(&
      |         ^~~~~~~~
./samples/SAFE/__tmp_4a64cc92.c:143:9: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_4a64cc92.c:31:6: note: declared here
   31 | void add_edge(struct Graph *g, int idx, int src, int dest, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_4a64cc92.c:143:9: error: expected declaration or statement at end of input
  143 |         add_edge(&
      |         ^~~~~~~~
./samples/SAFE/__tmp_4a64cc92.c:143:9: error: expected declaration or statement at end of input
